tests/error/array_errors/array_index_linear_set_duplicate_index.err
Error: Linearity violation (at $FILE:11:2)
   | 
 9 |   qs[1] = qubit()
10 |   qs[2] = qubit()
11 |   qs[0] = qubit()
   |   ^^^^^ Linear value at index 0 used multiple times

Note:
   | 
 7 |   qs = array(qubit() for _ in range(10))
 8 |   qs[0] = qubit()
   |   -----

Note: First use was here

Guppy compilation failed due to 1 previous error
